--- a/etc/kayobe/environments/training/kolla/globals.yml
+++ b/etc/kayobe/environments/training/kolla/globals.yml
@@ -5,9 +5,42 @@
 nova_compute_virt_type: qemu
 
 # Reduce the control plane's memory footprint by limiting the number of worker
-# processes to one per-service.
-openstack_service_workers: "1"
-openstack_service_rpc_workers: "1"
+# processes to two per-service when running in a VM.
+openstack_service_workers: "{% raw %}{{ [ansible_facts.processor_vcpus, 2 if ansible_facts.virtualization_role == 'guest' else 5] | min }}{% endraw %}"
+openstack_service_rpc_workers: "{% raw %}{{ [ansible_facts.processor_vcpus, 2 if ansible_facts.virtualization_role == 'guest' else 3] | min }}{% endraw %}"
 
-# Opensearch memory tuning
+# Glance Ceph configuration
+glance_backend_ceph: "no"
+
+# Cinder Ceph configuration
+# cinder_backend_ceph: "no"
+
+# Nova Ceph configuration
+nova_backend_ceph: "no"
+
+# Because this is a vxlan interface, Kayobe can't generate the config for it.
+# Therefore we can't use this interface as the external network
+# (external_net_names). Instead, make external_net_names an empty
+# list, and add the config that would be generated from it here.
+neutron_bridge_name: "{{ vxlan_interfaces[0].device }}-ovs"
+neutron_external_interface: "{{ vxlan_interfaces[0].device }}"
+
+# OpenSearch memory tuning
 opensearch_heap_size: 1g
+
+# Octavia load balancer configuration
+octavia_auto_configure: "no"
+octavia_provider_drivers: "ovn:OVN provider"
+octavia_provider_agents: "ovn"
+
+# Manila CephFS configuration
+manila_cephfs_filesystem_name: manila-cephfs
+
+# Designate configuration
+designate_ns_record:
+  - "ns1.mos.{{ root_domain | default('example.com') }}"
+  - "ns2.mos.{{ root_domain | default('example.com') }}"
+  - "ns3.mos.{{ root_domain | default('example.com') }}"
+designate_backend: "bind9"
+designate_recursion: "yes"
+designate_forwarders_addresses: "1.1.1.1; 8.8.8.8"
