--- a/etc/kayobe/environments/training/seed-hypervisor.yml
+++ b/etc/kayobe/environments/training/seed-hypervisor.yml
@@ -4,4 +4,4 @@
 
 # User with which to access the seed hypervisor via SSH during bootstrap, in
 # order to setup the Kayobe user account. Default is {{ os_distribution }}.
-seed_hypervisor_bootstrap_user: "{{ os_distribution if os_distribution == 'ubuntu' else 'cloud-user' }}"
+seed_hypervisor_bootstrap_user: "{{ os_distribution if os_distribution == 'ubuntu' else 'rocky' }}"
